--- a/less/hux-blog.less
+++ b/less/hux-blog.less
@@ -445,7 +445,7 @@ pre code{
 	}
 	.post-heading {
 		h1 {
-			font-size: 30px;
+			//font-size: 30px;
 			margin-bottom: 24px;
 		}
 		.subheading,
